--- a/src/error.html
+++ b/src/error.html
@@ -7,8 +7,7 @@
 		%sveltekit.head%
 	</head>
 	<body style = "height: 100vh" data-sveltekit-preload-data="hover">
-		<div>
-			%sveltekit.body%
-		</div>
+		<h1 class="flex content-center"> 😱 An error occurred 😱</h1>
+		%sveltekit.body%
 	</body>
 </html>
