--- a/src/app.html
+++ b/src/app.html
@@ -6,9 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body style = "height: 100vh" data-sveltekit-preload-data="hover">
-		<div>
-			%sveltekit.body%
-		</div>
+	<body style="height: 100vh" data-sveltekit-preload-data="hover">
+		<div>%sveltekit.body%</div>
 	</body>
 </html>
