--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,13 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Leakmited - LP</title>
+		<meta
+			name="description"
+			content="Assignment for Leakmited - A dashboard involving a map loading
+			interactive data within"
+		>
+		<meta name="robots" content="noindex"/>
 		%sveltekit.head%
 	</head>
 	<body style="height: 100vh" data-sveltekit-preload-data="hover">
